--- a/middle-out.cabal
+++ b/middle-out.cabal
@@ -7,6 +7,7 @@ version:        0.1.0.0
 author:         S. M. Hickman
 maintainer:     sean@grump.ly
 license:        BSD3
+license-file:   LICENSE
 build-type:     Simple
 cabal-version:  >= 1.10
 
