Add ordered list monoid benchmark. Add inline pragmas.

--- a/origami-fold.cabal
+++ b/origami-fold.cabal
@@ -9,7 +9,7 @@ cabal-version:  >= 1.10
 
 
 
-benchmark bench-ef
+benchmark bench-origami-fold
   type: exitcode-stdio-1.0
   main-is: Bench.hs
   hs-source-dirs: src tests bench
