--- a/origami-fold.cabal
+++ b/origami-fold.cabal
@@ -32,6 +32,7 @@ test-suite test-origami-fold
       base >=4.8
     , containers
     , trivial
+    , deepseq
   default-language: Haskell2010
 
 
