--- a/origami-fold.cabal
+++ b/origami-fold.cabal
@@ -7,6 +7,10 @@ license-file:   LICENSE
 build-type:     Simple
 cabal-version:  >= 1.10
 
+source-repository head
+  type: git
+  location: https://github.com/grumply/origami-fold.git
+
 library
   hs-source-dirs:
       src
@@ -14,6 +18,6 @@ library
       base >=4.8
     , containers
   exposed-modules:
-      Data.Origami
+      Origami.Fold
   default-language: Haskell2010
 
